docs/examples/invalid/semanticErr/extension/switch/invalidTypeString.wacc
begin
  char[] hi = "hi";

  switch hi on
  case 4:
      skip
  default:
      skip
  end
end
